--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "@ng-select/ng-select": "^2.15.2",
     "@types/jquery": "^3.3.29",
     "angular-datatables": "^7.0.0",
+    "angular2-multiselect-dropdown": "^4.6.3",
     "animate.css": "^3.7.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.2.1",
     "chartist": "^0.11.0",
     "chartist-plugin-legend": "^0.6.2",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "express": "^4.17.1",
@@ -46,6 +49,8 @@
     "jquery": "^3.3.1",
     "jqvmap": "^1.5.1",
     "material-design-iconic-font": "^2.2.0",
+    "mongoose": "^5.9.25",
+    "morgan": "^1.10.0",
     "ng-chartist": "^4.0.0",
     "ng5-slider": "^1.1.13",
     "ngx-autosize": "^1.3.3",
@@ -60,11 +65,7 @@
     "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "mongoose": "^5.9.25",
-    "morgan": "^1.10.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular/cli": "^8.3.26",
