--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "^8.3.26",
     "@angular-devkit/build-angular": "^0.803.25",
+    "@angular/cli": "^8.3.26",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/chartist": "^0.9.43",
@@ -85,6 +85,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "mongodb": "^3.6.0",
     "postcss-loader": "^3.0.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
