--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ngx-scrollbar": "^4.1.1",
     "node-sass": "^4.13.1",
     "npm": "^6.13.7",
+    "path": "^0.12.7",
     "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.9.0",
